--- a/sentimentAnalyzeServer/package.json
+++ b/sentimentAnalyzeServer/package.json
@@ -5,7 +5,7 @@
   "main": "sentimentAnalyzerServer.js",
   "scripts": {
     "start": "nodemon sentimentAnalyzerServer.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node unit_tests.js"
   },
   "author": "",
   "license": "ISC",
